tests/test_data/lighthouse-jx/expected/networking.k8s.io/v1beta1/Ingress/hook.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hook
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hook
          servicePort: 80
    host: hook-jx.mydomain.com
  tls:
  - hosts:
    - hook-jx.mydomain.com
    secretName: "tls-mydomain-com-s"
